--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="wheel_of_choice"
+        android:label="Wheel of Choice"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
